; ModuleID = '/home/carl/AnghaBench/jq/src/extr_builtin.c_f_getpath.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_builtin.c_f_getpath.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32)* @f_getpath to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @f_getpath(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32*, i32** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* %6, align 4
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @jv_copy(i32 %10)
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @jv_copy(i32 %12)
  %14 = call i32 @jv_getpath(i32 %11, i32 %13)
  %15 = call i32 @_jq_path_append(i32* %7, i32 %8, i32 %9, i32 %14)
  ret i32 %15
}

declare dso_local i32 @_jq_path_append(i32*, i32, i32, i32) #1

declare dso_local i32 @jv_getpath(i32, i32) #1

declare dso_local i32 @jv_copy(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
